--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@
 language: python
 python:
 - "2.7.9"
+addons:
+  postgresql: "9.4"
+before_script:
+- psql -c 'create database tournament;' -U postgres
+- psql -c tournament.sql tournament; -U postgres
 before_install:
 - pip install psycopg2
 script: python unittests.py -b -v
