--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,18 @@ python:
 addons:
   postgresql: "9.4"
 before_script:
-- psql -c tournament.sql tournament; -U postgres
+- psql -c 'CREATE TABLE players (id serial NOT NULL, name text NOT NULL,
+country text NOT NULL, code text, CONSTRAINT players_pkey PRIMARY KEY (id))
+WITH (OIDS=FALSE);' -U postgres
+- psql -c 'ALTER TABLE players OWNER TO postgres;' -U postgres
+- psql -c 'CREATE TABLE matches (id serial NOT NULL, player_1 text NOT NULL,
+player_2 text NOT NULL, winner text NOT NULL, timestamp text NOT NULL,
+CONSTRAINT matches_pkey PRIMARY KEY (id)) WITH (OIDS=FALSE);' -U postgres
+- psql -c 'ALTER TABLE matches OWNER TO postgres;' -U postgres
+- psql -c 'CREATE TABLE auditlog (id serial NOT NULL, entry text NOT NULL,
+action text NOT NULL, unique_id text NOT NULL, timestamp text NOT NULL,
+CONSTRAINT auditlog_pkey PRIMARY KEY (id)) WITH (OIDS=FALSE);'
+- psql -c 'ALTER TABLE auditlog OWNER TO postgres;' -U postgres
 before_install:
 - pip install psycopg2
 script: python unittests.py -b -v
