--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 addons:
   postgresql: "9.4"
 before_script:
+- psql -c 'CREATE DATABASE tournament;' -U postgres
 - python createdb.py
 before_install:
 - pip install psycopg2
