--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_script:
 - python createdb.py
 before_install:
 - pip install psycopg2
+- pip install PrettyTable
 script: python unittests.py -b -v
