--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
 before_install:
 - pip install psycopg2
 - pip install PrettyTable
-script: python unittests.py -b -v
+script: python unittests.py -v
