--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 - pip install psycopg2
 - pip install PrettyTable
 - pip install codecov
-script: python unittests.py -b -v
+script:
+- if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then python unittests.py -v
+- if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then python unittests.py -b -v
 after_success:
   codecov
