--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 #   http://lint.travis-ci.org/
 language: python
 python:
-- "2.6"
-- "2.7"
+- "2.7.8"
+- "2.7.9"
 addons:
   postgresql: "9.4"
 before_script:
@@ -13,5 +13,4 @@ before_install:
 - pip install psycopg2
 - pip install PrettyTable
 script:
-- if [[ $TRAVIS_PYTHON_VERSION == 2.6.9 ]]; then python unittests.py -v; fi
-- if [[ $TRAVIS_PYTHON_VERSION == 2.7.9 ]]; then python unittests.py -b -v; fi
+- python unittests.py -b -v
