--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 - pip install psycopg2
 - pip install PrettyTable
 script:
-- python unittests.py -b -v
+- python match_tests.py -b -v
