--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ before_install:
 - pip install psycopg2
 - pip install PrettyTable
 script:
-- python match_tests.py -b -v
+- python tests/db_tests.py -b -v
+- python tests/match_tests.py -b -v
