--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ script:
 - python test_db.py -b -v
 - python createdb.py
 - python test_match.py -b -v
+- coverage run test_db.py
+- coverage run test_match.py
 after_success:
   coveralls
