--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ addons:
   postgresql: "9.4"
 before_script:
 - psql -c 'CREATE DATABASE tournament;' -U postgres
-- python createdb.py
+- python tcdbfunc.py
 before_install:
 - pip install psycopg2
 - pip install PrettyTable
 script:
 - python test_db.py
-- python createdb.py
+- python tcdbfunc.py
 - python test_match.py
