--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,20 @@
 language: python
 python:
 - "2.7.9"
-addons:
-  postgresql: "9.4"
+matrix:
+  include:
+  - python: "2.7.9"
+    addons:
+      postgresql: "9.4"
+  - python: "2.7.9"
+    addons:
+      postgresql: "9.3"
+  - python: "2.7.9"
+    addons:
+      postgresql: "9.2"
+  - python: "2.7.9"
+    addons:
+      postgresql: "9.1"
 before_script:
 - psql -c 'CREATE DATABASE tournament;' -U postgres
 - python tcdbfunc.py
