--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_install:
 - pip install psycopg2
 - pip install PrettyTable
 script:
-- python test_db.py
-- python tcdbfunc.py
-- python test_tournament.py
+- python tests/test_db.py
+- python tests/tcdbfunc.py
+- python tests/test_tournament.py
